# password-manager

./: Cargo.toml  README.md  build.rs  resource.rc  test_vault.vault
src/: app.rs  main.rs
src/app/: crypt.rs  entry.rs  ui.rs  users.rs  vault.rs
src/data/: entry.rs  user.rs
src/ui/: entries.rs  login.rs  mod.rs  popup.rs
src/utils/: crypt.rs  file.rs  mod.rs
