[package]
name = "password-manager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "TheVault"         
path = "src/main.rs"             
windows_subsystem = "windows"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
serde_json = "1.0.140"
ring = "0.17.14"
dirs = "6.0.0"
dirs-next = "2.0.0"
rfd = "0.15.3"
chrono = "0.4.41"

[build-dependencies]
winres = "0.1.12"
